add neural networks

--- a/softmax.ipynb
+++ b/softmax.ipynb
@@ -141,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 2.364883\n",
+      "loss: 2.331300\n",
       "sanity check: 2.302585\n"
      ]
     }
@@ -182,33 +182,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical: 2.735347 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 3.946848 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -2.174931 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 1.007205 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 1.393094 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 1.908635 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -1.733587 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -2.023349 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 2.784732 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 1.910982 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 2.504044 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 0.726303 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 0.769184 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 0.578018 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 1.694829 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -0.503004 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -0.067824 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -1.242508 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 3.332459 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -1.422583 analytic: 0.000000, relative error: 1.000000e+00\n"
+      "numerical: 4.131372 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: -0.243495 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: 0.615005 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: -1.988250 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: 1.191158 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: 1.760743 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: -0.810986 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: 0.511791 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: -0.410871 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: -2.430116 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: -1.329126 analytic: -0.004516, relative error: 9.932269e-01\n",
+      "numerical: -1.513397 analytic: -0.003918, relative error: 9.948357e-01\n",
+      "numerical: -0.614732 analytic: 0.002170, relative error: 1.000000e+00\n",
+      "numerical: -2.624308 analytic: -0.001172, relative error: 9.991076e-01\n",
+      "numerical: -0.010070 analytic: 0.004760, relative error: 1.000000e+00\n",
+      "numerical: 0.026127 analytic: -0.000144, relative error: 1.000000e+00\n",
+      "numerical: 3.685476 analytic: 0.000356, relative error: 9.998071e-01\n",
+      "numerical: 0.706575 analytic: -0.002755, relative error: 1.000000e+00\n",
+      "numerical: -1.907603 analytic: 0.002537, relative error: 1.000000e+00\n",
+      "numerical: 0.072212 analytic: 0.004606, relative error: 8.800695e-01\n"
      ]
     }
    ],
@@ -231,17 +231,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "naive loss: 2.364883e+00 computed in 0.040245s\n",
-      "vectorized loss: 2.364883e+00 computed in 0.006579s\n",
+      "naive loss: 2.331300e+00 computed in 0.074993s\n",
+      "vectorized loss: 2.331300e+00 computed in 0.006087s\n",
       "Loss difference: 0.000000\n",
-      "Gradient difference: 354.973818\n"
+      "Gradient difference: 293.341991\n"
      ]
     }
    ],
@@ -270,17 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "best validation accuracy achieved during cross-validation: -1.000000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use the validation set to tune hyperparameters (regularization strength and\n",
     "# learning rate). You should experiment with different ranges for the learning\n",
@@ -341,21 +333,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'W'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-69e6f7ad5c98>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Visualize the learned weights for each class\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbest_softmax\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mW\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# strip out the bias\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mw_min\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw_max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'W'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Visualize the learned weights for each class\n",
     "w = best_softmax.W[:-1,:] # strip out the bias\n",
