--- a/softmax.ipynb
+++ b/softmax.ipynb
@@ -141,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 2.331300\n",
+      "loss: 2.383588\n",
       "sanity check: 2.302585\n"
      ]
     }
@@ -189,26 +189,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numerical: 4.131372 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -0.243495 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 0.615005 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -1.988250 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 1.191158 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 1.760743 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -0.810986 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: 0.511791 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -0.410871 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -2.430116 analytic: 0.000000, relative error: 1.000000e+00\n",
-      "numerical: -1.329126 analytic: -0.004516, relative error: 9.932269e-01\n",
-      "numerical: -1.513397 analytic: -0.003918, relative error: 9.948357e-01\n",
-      "numerical: -0.614732 analytic: 0.002170, relative error: 1.000000e+00\n",
-      "numerical: -2.624308 analytic: -0.001172, relative error: 9.991076e-01\n",
-      "numerical: -0.010070 analytic: 0.004760, relative error: 1.000000e+00\n",
-      "numerical: 0.026127 analytic: -0.000144, relative error: 1.000000e+00\n",
-      "numerical: 3.685476 analytic: 0.000356, relative error: 9.998071e-01\n",
-      "numerical: 0.706575 analytic: -0.002755, relative error: 1.000000e+00\n",
-      "numerical: -1.907603 analytic: 0.002537, relative error: 1.000000e+00\n",
-      "numerical: 0.072212 analytic: 0.004606, relative error: 8.800695e-01\n"
+      "numerical: 2.480244 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: -4.462369 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: 4.218180 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: -3.476119 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: 3.518007 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: -2.966544 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: -3.355958 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: 0.720556 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: 1.120430 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: -1.643762 analytic: 0.000000, relative error: 1.000000e+00\n",
+      "numerical: -1.779832 analytic: -0.000393, relative error: 9.995585e-01\n",
+      "numerical: 1.508026 analytic: 0.007563, relative error: 9.900202e-01\n",
+      "numerical: 1.449911 analytic: 0.006472, relative error: 9.911125e-01\n",
+      "numerical: -0.169019 analytic: -0.001840, relative error: 9.784625e-01\n",
+      "numerical: 1.047256 analytic: -0.001543, relative error: 1.000000e+00\n",
+      "numerical: 1.922888 analytic: 0.000299, relative error: 9.996889e-01\n",
+      "numerical: -0.763401 analytic: -0.006317, relative error: 9.835860e-01\n",
+      "numerical: 2.721341 analytic: -0.005025, relative error: 1.000000e+00\n",
+      "numerical: 2.485140 analytic: 0.004317, relative error: 9.965317e-01\n",
+      "numerical: -1.394130 analytic: 0.001588, relative error: 1.000000e+00\n"
      ]
     }
    ],
